[package]
name = "citadel-shield"
version = "0.1.0"
edition = "2021"
authors = ["ValkyrieSentinel"]

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
citadel-common = { path = "./citadel-common" }
tokio = { version = "1.35", features = ["full"] }
ratatui = "0.26"
crossterm = "0.27"
dns-lookup = "2.0"

[workspace]
members = [
    "citadel-ebpf",
    "citadel-common",
]
